--- a/index.html
+++ b/index.html
@@ -100,27 +100,27 @@ Crafted with ❤ in Bangalore, India.
           </div>
           <div class="row" id="box1">
             <div class="col-md-myoffset-1 col-sm-2">
-              <a href="http://www.huzzpa.com" target="_blank">
+              <a href="http://www.huzzpa.com/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/huzzpa.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://www.mypr.io" target="_blank">
+              <a href="http://www.mypr.io/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/mypr.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://britannia.herokuapp.com" target="_blank">
+              <a href="http://britannia.herokuapp.com/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/goodday.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2 text-center">
-              <a href="http://dev.foofys.com/snoop" target="_blank">
+              <a href="http://dev.foofys.com/snoop/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/snoop.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://www.foofys.com/garage" target="_blank">
+              <a href="http://www.foofys.com/garage/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/garage.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
@@ -130,27 +130,27 @@ Crafted with ❤ in Bangalore, India.
 
           <div class="row" id="box2">
             <div class="col-md-myoffset-1 col-sm-2">
-              <a href="http://www.spykk.com" target="_blank">
+              <a href="http://www.spykk.com/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/spykk.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2 text-center">
-              <a href="http://www.bohrabros.com" target="_blank">
+              <a href="http://www.bohrabros.com/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/bo.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2 text-center">
-              <a href="http://www.ctod.in" target="_blank">
+              <a href="http://www.ctod.in/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/ctod.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2 text-center">
-              <a href="http://dev.foofys.com/levo" target="_blank">
+              <a href="http://dev.foofys.com/levo/" target="_blank">
                 <img src="img/port/levo.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://www.hyperlocalleague.com" target="_blank">
+              <a href="http://www.hyperlocalleague.com/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/hll.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
@@ -165,22 +165,22 @@ Crafted with ❤ in Bangalore, India.
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2 text-center">
-              <a href="http://www.yesmastr.com" target="_blank">
+              <a href="http://www.yesmastr.com/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/yes.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2 text-center">
-              <a href="http://www.chaichun.in" target="_blank">
+              <a href="http://www.chaichun.in/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/chai.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2 text-center">
-              <a href="http://hopwit.me" target="_blank">
+              <a href="http://hopwit.me/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/hopwit.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://chalknpaper.com" target="_blank">
+              <a href="http://chalknpaper.com/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/cnp.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
@@ -202,12 +202,12 @@ Crafted with ❤ in Bangalore, India.
           </center>
           <div class="row">
             <div class="col-md-offset-1 col-md-5 text-center">
-              <a href="https://chrome.google.com/webstore/detail/clean-chrome/fmldiainnnecolalfmbeajgnhgbaekfa" target="_blank">
+              <a href="https://chrome.google.com/webstore/detail/clean-chrome/fmldiainnnecolalfmbeajgnhgbaekfa?utm_source=ashwin_website&utm_medium=portfolio" target="_blank">
                 <img src="img/port/cleanchrome.png" id="ce1">
               </a>
             </div><!--col-md-* end-->
             <div class="col-md-4 text-center">
-              <a href="https://chrome.google.com/webstore/detail/aurora-new-tab/likchgbfoehabkijbmdkahdohhdghllo" target="_blank">
+              <a href="https://chrome.google.com/webstore/detail/aurora-new-tab/likchgbfoehabkijbmdkahdohhdghllo?utm_source=ashwin_website&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/aurora.png" id="ce2">
               </a>
             </div><!--col-md-* end-->
@@ -222,7 +222,7 @@ Crafted with ❤ in Bangalore, India.
         <div class="section5 text-center">
           <span class="sec5-hd" id="sec5-hd">Check out TerBot</span>
           <br><br>
-          <a href="https://ashwinkshenoy.github.io/bot/">
+          <a href="https://ashwinkshenoy.github.io/bot/?utm_source=ashwin_website&utm_medium=portfolio&utm_content=logolink">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="robot" x="0" y="0" viewBox="0 0 600 800" enable-background="new 0 0 600 800" xml:space="preserve">
               <ellipse id="shadow" opacity="0.4" fill="#2C3332" cx="300" cy="703.4" rx="89" ry="30.6"/>
               <g id="left_arm">
