--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@ Crafted with ❤ in Bangalore, India.
           </center>
           <div class="row">
             <div class="col-md-offset-1 col-md-5 text-center">
-              <a href="https://chrome.google.com/webstore/detail/clean-chrome/fmldiainnnecolalfmbeajgnhgbaekfa?utm_source=ashwin_website&utm_medium=portfolio" target="_blank">
+              <a href="https://chrome.google.com/webstore/detail/clean-chrome/fmldiainnnecolalfmbeajgnhgbaekfa?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/cleanchrome.png" id="ce1">
               </a>
             </div><!--col-md-* end-->
             <div class="col-md-4 text-center">
-              <a href="https://chrome.google.com/webstore/detail/aurora-new-tab/likchgbfoehabkijbmdkahdohhdghllo?utm_source=ashwin_website&utm_medium=portfolio&utm_content=logolink" target="_blank">
+              <a href="https://chrome.google.com/webstore/detail/aurora-new-tab/likchgbfoehabkijbmdkahdohhdghllo?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/aurora.png" id="ce2">
               </a>
             </div><!--col-md-* end-->
@@ -222,7 +222,7 @@ Crafted with ❤ in Bangalore, India.
         <div class="section5 text-center">
           <span class="sec5-hd" id="sec5-hd">Check out TerBot</span>
           <br><br>
-          <a href="https://ashwinkshenoy.github.io/bot/?utm_source=ashwin_website&utm_medium=portfolio&utm_content=logolink">
+          <a href="https://ashwinkshenoy.github.io/bot/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="robot" x="0" y="0" viewBox="0 0 600 800" enable-background="new 0 0 600 800" xml:space="preserve">
               <ellipse id="shadow" opacity="0.4" fill="#2C3332" cx="300" cy="703.4" rx="89" ry="30.6"/>
               <g id="left_arm">
