removed campaign for mypr

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Crafted with ❤ in Bangalore, India.
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://www.mypr.io/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
+              <a href="http://www.mypr.io" target="_blank">
                 <img src="img/port/mypr.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
