--- a/index.html
+++ b/index.html
@@ -306,6 +306,9 @@ Crafted with ❤ in Bangalore, India.
             <a href="https://in.linkedin.com/in/ashwinkshenoy" target="_blank">
               <img src="img/icons/in.png" id="social4" class="social_icon">
             </a>
+            <a href="https://blog.ashwinshenoy.com/" target="_blank">
+              <img src="img/icons/medium.png" id="social5" class="social_icon">
+            </a>
           </center>
         </div><!--section6 end-->
         <div class="space"></div>
