--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Crafted with ❤ in Bangalore, India.
           <img src="img/ashwin.png" class="img-circle img-thumbnail" id="myimg">
           <img src="img/yup.png" class="arrow">
           <br><br>
-          <span class="sec1-hd2">Developer at</span><img src="img/icons/foofys.png" class="foo">
+          <span class="sec1-hd2">Senior Software Engineer at</span><img src="img/icons/foofys.png" class="foo">
         </div><!--section1 end-->
       </div><!--container end-->
     </div><!--jumbo1 end-->
