--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Crafted with ❤ in Bangalore, India.
           <img src="img/ashwin.png" class="img-circle img-thumbnail" id="myimg">
           <img src="img/yup.png" class="arrow">
           <br><br>
-          <span class="sec1-hd2">Senior Software Engineer at</span><img src="img/icons/foofys.png" class="foo">
+          <span class="sec1-hd2">Software Engineer at</span><img src="img/icons/foofys.png" class="foo">
         </div><!--section1 end-->
       </div><!--container end-->
     </div><!--jumbo1 end-->
@@ -120,8 +120,8 @@ Crafted with ❤ in Bangalore, India.
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://www.foofys.com/garage/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
-                <img src="img/port/garage.png" class="port-img">
+              <a href="http://tribee.io/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
+                <img src="img/port/tribee.png" class="tribee">
               </a>
             </div><!--col-sm-* end-->
           </div><!--row end-->
@@ -180,10 +180,16 @@ Crafted with ❤ in Bangalore, India.
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
+              <a href="http://www.foofys.com/garage/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
+                <img src="img/port/garage.png" class="port-img">
+              </a>
+            </div><!--col-sm-* end-->
+            <!-- <div class="col-sm-2">
               <a href="http://chalknpaper.com/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/cnp.png" class="port-img">
               </a>
-            </div><!--col-sm-* end-->
+            </div> --><!--col-sm-* end-->
+
           </div><!--row end-->
           <div class="text-center">
             <br><br><br><br>
@@ -222,7 +228,7 @@ Crafted with ❤ in Bangalore, India.
         <div class="section5 text-center">
           <span class="sec5-hd" id="sec5-hd">Check out TerBot</span>
           <br><br>
-          <a href="https://ashwinkshenoy.github.io/bot/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink">
+          <a href="https://github.com/ashwinkshenoy/bot/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="robot" x="0" y="0" viewBox="0 0 600 800" enable-background="new 0 0 600 800" xml:space="preserve">
               <ellipse id="shadow" opacity="0.4" fill="#2C3332" cx="300" cy="703.4" rx="89" ry="30.6"/>
               <g id="left_arm">
@@ -295,19 +301,22 @@ Crafted with ❤ in Bangalore, India.
             <span class="sec6-hd" id="sec6-hd">Get in Touch</span>
             <br><br><br>
             <a href="mailto:ashwinkshenoy@gmail.com?subject=Get in touch for a coffee!" target="_blank">
-              <img src="img/icons/mail.png" id="social1" class="social_icon">
+              <img src="img/icons/mail.png" id="mail" class="social_icon">
             </a>
             <a href="https://www.facebook.com/ashwin.k.shenoy" target="_blank">
-              <img src="img/icons/fb.png" id="social2" class="social_icon">
+              <img src="img/icons/fb.png" id="fb" class="social_icon">
             </a>
             <a href="https://twitter.com/ashwinkshenoy" target="_blank">
-              <img src="img/icons/tw.png" id="social3" class="social_icon">
+              <img src="img/icons/tw.png" id="tw" class="social_icon">
             </a>
             <a href="https://in.linkedin.com/in/ashwinkshenoy" target="_blank">
-              <img src="img/icons/in.png" id="social4" class="social_icon">
+              <img src="img/icons/in.png" id="linkedin" class="social_icon">
+            </a>
+            <a href="https://github.com/ashwinkshenoy" target="_blank">
+              <img src="img/icons/git.png" id="git" class="social_icon">
             </a>
             <a href="https://blog.ashwinshenoy.com/" target="_blank">
-              <img src="img/icons/medium.png" id="social5" class="social_icon">
+              <img src="img/icons/medium.png" id="blog" class="social_icon">
             </a>
           </center>
         </div><!--section6 end-->
