Added google fit

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Crafted with ❤ in Bangalore, India.
           <img src="img/ashwin.png" class="img-circle img-thumbnail" id="myimg">
           <img src="img/yup.png" class="arrow">
           <br><br>
-          <span class="sec1-hd2">Software Engineer at</span><img src="img/icons/foofys.png" class="foo">
+          <span class="sec1-hd2">Senior Software Engineer at</span><img src="img/icons/foofys.png" class="foo">
         </div><!--section1 end-->
       </div><!--container end-->
     </div><!--jumbo1 end-->
@@ -207,7 +207,7 @@ Crafted with ❤ in Bangalore, India.
             <br><br><br><br>
           </center>
           <div class="row">
-            <div class="col-md-offset-1 col-md-5 text-center">
+            <div class="col-md-4 text-center">
               <a href="https://chrome.google.com/webstore/detail/clean-chrome/fmldiainnnecolalfmbeajgnhgbaekfa?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/cleanchrome.png" id="ce1">
               </a>
@@ -215,6 +215,11 @@ Crafted with ❤ in Bangalore, India.
             <div class="col-md-4 text-center">
               <a href="https://chrome.google.com/webstore/detail/aurora-new-tab/likchgbfoehabkijbmdkahdohhdghllo?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/aurora.png" id="ce2">
+              </a>
+            </div><!--col-md-* end-->
+            <div class="col-md-4 text-center">
+              <a href="https://chrome.google.com/webstore/detail/google-fit/mgmcdckgkffghecgillhpahgaibkgdem?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
+                <img src="img/port/google.png" id="ce3">
               </a>
             </div><!--col-md-* end-->
           </div><!--row end-->
@@ -336,3 +341,11 @@ Crafted with ❤ in Bangalore, India.
 
   </body>
 </html>
+
+
+<!--
+
+Crafted with ❤ in Bangalore, India.
+@ashwinkshenoy
+
+ -->
