--- a/index.html
+++ b/index.html
@@ -145,10 +145,15 @@ Crafted with ❤ in Bangalore, India.
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2 text-center">
+              <a href="http://realiz3d.in?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
+                <img src="img/port/realize.png" class="port-img">
+              </a>
+            </div><!--col-sm-* end-->
+            <!-- <div class="col-sm-2 text-center">
               <a href="http://dev.foofys.com/levo/" target="_blank">
                 <img src="img/port/levo.png" class="port-img">
               </a>
-            </div><!--col-sm-* end-->
+            </div> --><!--col-sm-* end-->
             <div class="col-sm-2">
               <a href="http://www.hyperlocalleague.com/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/hll.png" class="port-img">
@@ -170,8 +175,8 @@ Crafted with ❤ in Bangalore, India.
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2 text-center">
-              <a href="http://www.chaichun.in/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
-                <img src="img/port/chai.png" class="port-img">
+              <a href="https://www.shenoychanakya.com/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
+                <img src="img/port/shenoys.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2 text-center">
@@ -180,8 +185,8 @@ Crafted with ❤ in Bangalore, India.
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://www.foofys.com/garage/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
-                <img src="img/port/garage.png" class="port-img">
+              <a href="https://foofys.com/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
+                <img src="img/port/foofys.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <!-- <div class="col-sm-2">
