--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ Crafted with ❤ in Bangalore, India.
           <center>
             <span class="sec6-hd" id="sec6-hd">Get in Touch</span>
             <br><br><br>
-            <a href="mailto:ashwinkshenoy@gmail.com?subject=Get in touch for a coffee!" target="_blank">
+            <a href="mailto:ashwinkshenoy@gmail.com?subject=Get in touch for a cup of coffee!" target="_blank">
               <img src="img/icons/mail.png" id="mail" class="social_icon">
             </a>
             <a href="https://www.facebook.com/ashwin.k.shenoy" target="_blank">
@@ -324,6 +324,9 @@ Crafted with ❤ in Bangalore, India.
             </a>
             <a href="https://github.com/ashwinkshenoy" target="_blank">
               <img src="img/icons/git.png" id="git" class="social_icon">
+            </a>
+            <a href="https://codepen.io/ashwinshenoy" target="_blank">
+              <img src="img/icons/codepen.png" id="cp" class="social_icon">
             </a>
             <a href="https://blog.ashwinshenoy.com/" target="_blank">
               <img src="img/icons/medium.png" id="blog" class="social_icon">
