--- a/app.html
+++ b/app.html
@@ -54,7 +54,7 @@ Crafted with ❤ in Bangalore, India.
           <br>
           <br>
           <div class="sp-hd1 center-align"><span class="green-hd">I am</span> Ashwin</div>
-          <div class="sp-hd2 center-align">Senior Software Engineer at foOfys</div>
+          <div class="sp-hd2 center-align">Software Engineer at foOfys</div>
           <br><br>
           <!-- <div class="center-align">
             <a class="waves-effect waves-light btn center-align">See My Portfolio</a>
