--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Crafted with ❤ in Bangalore, India.
           <img src="img/ashwin.png" class="img-circle img-thumbnail" id="myimg">
           <img src="img/yup.png" class="arrow">
           <br><br>
-          <span class="sec1-hd2">Senior Software Engineer at</span><img src="img/icons/foofys.png" class="foo">
+          <span class="sec1-hd2">Software Engineer at</span><img src="img/icons/foofys.png" class="foo">
         </div><!--section1 end-->
       </div><!--container end-->
     </div><!--jumbo1 end-->
@@ -105,8 +105,8 @@ Crafted with ❤ in Bangalore, India.
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://www.mypr.io" target="_blank">
-                <img src="img/port/mypr.png" class="port-img">
+              <a href="http://tribee.io/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
+                <img src="img/port/tribee.png" class="tribee">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
@@ -120,8 +120,8 @@ Crafted with ❤ in Bangalore, India.
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://tribee.io/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
-                <img src="img/port/tribee.png" class="tribee">
+              <a href="http://www.mypr.io" target="_blank">
+                <img src="img/port/mypr.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
           </div><!--row end-->
@@ -149,16 +149,16 @@ Crafted with ❤ in Bangalore, India.
                 <img src="img/port/realize.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
-            <!-- <div class="col-sm-2 text-center">
+            <div class="col-sm-2 text-center">
               <a href="http://dev.foofys.com/levo/" target="_blank">
                 <img src="img/port/levo.png" class="port-img">
               </a>
-            </div> --><!--col-sm-* end-->
-            <div class="col-sm-2">
+            </div><!--col-sm-* end-->
+            <!-- <div class="col-sm-2">
               <a href="http://www.hyperlocalleague.com/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/hll.png" class="port-img">
               </a>
-            </div><!--col-sm-* end-->
+            </div>--><!--col-sm-* end-->
           </div><!--row end-->
 
           <br><br><br>
@@ -214,17 +214,17 @@ Crafted with ❤ in Bangalore, India.
           <div class="row">
             <div class="col-md-4 text-center">
               <a href="https://chrome.google.com/webstore/detail/clean-chrome/fmldiainnnecolalfmbeajgnhgbaekfa?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
-                <img src="img/port/cleanchrome.png" id="ce1">
+                <img src="img/port/cleanchrome.png" id="ce1" class="img-responsive">
               </a>
             </div><!--col-md-* end-->
             <div class="col-md-4 text-center">
               <a href="https://chrome.google.com/webstore/detail/aurora-new-tab/likchgbfoehabkijbmdkahdohhdghllo?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
-                <img src="img/port/aurora.png" id="ce2">
+                <img src="img/port/aurora.png" id="ce2" class="img-responsive">
               </a>
             </div><!--col-md-* end-->
-            <div class="col-md-4 text-center">
+            <div class="col-md-4 text-left">
               <a href="https://chrome.google.com/webstore/detail/google-fit/mgmcdckgkffghecgillhpahgaibkgdem?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
-                <img src="img/port/google.png" id="ce3">
+                <img src="img/port/google.png" id="ce3" class="img-responsive">
               </a>
             </div><!--col-md-* end-->
           </div><!--row end-->
