--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Crafted with ❤ in Bangalore, India.
       });
     </script>
     <script type="text/javascript">
-      <!--
+      // <!--
       if (screen.width <= 699) {
         document.location = "app.html";
       }
@@ -73,7 +73,7 @@ Crafted with ❤ in Bangalore, India.
           <img src="img/ashwin.png" class="img-circle img-thumbnail" id="myimg">
           <img src="img/yup.png" class="arrow">
           <br><br>
-          <span class="sec1-hd2">Software Engineer at</span><img src="img/icons/foofys.png" class="foo">
+          <span class="sec1-hd2">Software Engineer at</span><img src="img/icons/rentomojo.svg" class="foo">
         </div><!--section1 end-->
       </div><!--container end-->
     </div><!--jumbo1 end-->
@@ -105,10 +105,11 @@ Crafted with ❤ in Bangalore, India.
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://tribee.io/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
-                <img src="img/port/tribee.png" class="tribee">
+              <a href="http://www.mypr.io" target="_blank">
+                <img src="img/port/mypr.png" class="port-img">
               </a>
-            </div><!--col-sm-* end-->
+            </div>
+            <!--col-sm-* end-->
             <div class="col-sm-2">
               <a href="http://britannia.herokuapp.com/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
                 <img src="img/port/goodday.png" class="port-img">
@@ -120,8 +121,8 @@ Crafted with ❤ in Bangalore, India.
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://www.mypr.io" target="_blank">
-                <img src="img/port/mypr.png" class="port-img">
+              <a href="https://dev.foofys.com/tribee" target="_blank">
+                <img src="img/port/tribee.png" class="tribee">
               </a>
             </div><!--col-sm-* end-->
           </div><!--row end-->
@@ -166,7 +167,7 @@ Crafted with ❤ in Bangalore, India.
           <div class="row" id="box3">
             <div class="col-md-myoffset-1 col-sm-2 text-center">
               <a href="http://dev.foofys.com/lekaraao" target="_blank">
-                <img src="img/port/lekar.png" class="port-img" style="">
+                <img src="img/port/lekar.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2 text-center">
@@ -208,7 +209,7 @@ Crafted with ❤ in Bangalore, India.
       <div class="container">
         <div class="section4 text-center">
           <center>
-            <span class="sec4-hd" id="sec4-hd">Chrome Extensions</span>
+            <div class="sec4-hd" id="sec4-hd">Chrome Extensions</div>
             <br><br><br><br>
           </center>
           <div class="row">
@@ -236,7 +237,9 @@ Crafted with ❤ in Bangalore, India.
     <div class="jumbo5 jumbotron">
       <div class="container">
         <div class="section5 text-center">
-          <span class="sec5-hd" id="sec5-hd">Check out TerBot</span>
+          <span class="sec5-hd" id="sec5-hd">
+            Check out TerBot <i class="fa fa-external-link" aria-hidden="true"></i>
+          </span>
           <br><br>
           <a href="https://github.com/ashwinkshenoy/bot/?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="robot" x="0" y="0" viewBox="0 0 600 800" enable-background="new 0 0 600 800" xml:space="preserve">
