--- a/app.html
+++ b/app.html
@@ -23,12 +23,8 @@ Crafted with ❤ in Bangalore, India.
     <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/app.css">
-    <!--JS-->
-    <!-- <script src="js/jquery.2.0.3.js"></script> -->
-    <!-- <script src="js/materialize.min.js"></script> -->
-    <!-- <script src="js/app.js"></script> -->
     <script type="text/javascript">
-      <!--
+      // <!--
       if (screen.width >= 699) {
         document.location = "index.html";
       }
@@ -49,25 +45,28 @@ Crafted with ❤ in Bangalore, India.
           <br>
           <br>
           <div class="center-align">
-            <img src="img/ashwin.png" class="prof-img">
+            <img src="img/ashwin2.jpg" class="prof-img">
           </div>
           <br>
           <br>
           <div class="sp-hd1 center-align"><span class="green-hd">I am</span> Ashwin</div>
-          <div class="sp-hd2 center-align">Software Engineer at foOfys</div>
+          <div class="sp-hd2 center-align">Senior Software Engineer at MoneySmart</div>
           <br><br>
           <!-- <div class="center-align">
             <a class="waves-effect waves-light btn center-align">See My Portfolio</a>
           </div> -->
           <div class="social-icons center-align">
-            <a href="https://www.facebook.com/ashwin.k.shenoy">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
+            <a href="https://github.com/ashwinkshenoy">
+              <i class="fa fa-github" aria-hidden="true"></i>
+            </a>
+            <a href="https://in.linkedin.com/in/ashwinkshenoy">
+              <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
             <a href="https://twitter.com/ashwinkshenoy">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="https://in.linkedin.com/in/ashwinkshenoy">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
+            <a href="https://www.facebook.com/ashwin.k.shenoy">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
           </div><!--social-icons end-->
         </div><!--splash Content end-->
