--- a/index.html
+++ b/index.html
@@ -69,10 +69,16 @@ Crafted with ❤ in Bangalore, India.
           </span>
           <br>
           <img src="img/ashwin2.jpg" class="profile-img" id="myimg">
-          <img src="img/yup.png" class="arrow">
+          <img src="img/yup.svg" class="arrow">
           <br><br>
-          <span class="sec1-hd2">Senior FE Engineer at</span>
-          <img src="img/icons/rentomojo.svg" class="foo">
+          <span class="sec1-hd2">Senior Software Engineer at</span>
+          <img src="img/icons/moneysmart.svg" class="foo1">
+          <br>
+          <div class="past">
+            <span class="sec1-hd3">Past:</span>
+            <img src="img/icons/rentomojo.svg" class="foo2">
+            <img src="img/icons/foofys.svg" class="foo2">
+          </div>
         </div>
       </div>
     </div>
