--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Crafted with ❤ in Bangalore, India.
             Hi, I'm Ashwin
           </span>
           <br>
-          <img src="img/ashwin2.jpg" class="profile-img" id="myimg">
+          <img src="img/ashwin.jpg" class="profile-img" id="myimg">
           <img src="img/yup.svg" class="arrow">
           <br><br>
           <span class="sec1-hd2">Senior Software Engineer at</span>
@@ -227,7 +227,7 @@ Crafted with ❤ in Bangalore, India.
             <div class="col-md-6 text-center">
               <a href="https://chrome.google.com/webstore/detail/aurora-new-tab/likchgbfoehabkijbmdkahdohhdghllo?utm_source=ashwinshenoy.com&utm_medium=portfolio&utm_content=logolink"
                 target="_blank">
-                <img src="img/port/aurora.png" id="ce2" class="img-responsive ma-auto">
+                <img src="img/port/aurora.svg" id="ce2" class="img-responsive ma-auto aurora-logo">
               </a>
             </div>
           </div>
