mob image change

--- a/app.html
+++ b/app.html
@@ -45,7 +45,7 @@ Crafted with ❤ in Bangalore, India.
           <br>
           <br>
           <div class="center-align">
-            <img src="img/ashwin2.jpg" class="prof-img">
+            <img src="img/ashwin.jpg" class="prof-img">
           </div>
           <br>
           <br>
