--- a/app.html
+++ b/app.html
@@ -18,9 +18,9 @@ Crafted with ❤ in Bangalore, India.
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#7a4bcf">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name=viewport content="width=device-width, initial-scale=1 ,user-scalable=no">
+    <meta name=viewport content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <!-- CSS -->
-    <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/app.css">
     <script type="text/javascript">
