--- a/app.html
+++ b/app.html
@@ -15,26 +15,26 @@ Crafted with ❤ in Bangalore, India.
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
     <title>Ashwin K Shenoy</title>
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="theme-color" content="#7a4bcf">
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name=viewport content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="theme-color" content="#7a4bcf" />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="icon" type="image/png" href="img/favicon.png" />
     <!-- CSS -->
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/app.css" />
     <script type="text/javascript">
       // <!--
       if (screen.width >= 699) {
-        document.location = "index.html";
+        document.location = 'index.html';
       }
       //-->
     </script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
   <body id="body">
@@ -42,16 +42,16 @@ Crafted with ❤ in Bangalore, India.
       <div class="container">
         <div class="spash-content">
           <div class="sp-hd1 center-align">Hi <span class="green-hd">there!</span></div>
-          <br>
-          <br>
+          <br />
+          <br />
           <div class="center-align">
-            <img src="img/ashwin.jpg" class="prof-img">
+            <img src="img/ashwin.jpg" class="prof-img" />
           </div>
-          <br>
-          <br>
+          <br />
+          <br />
           <div class="sp-hd1 center-align"><span class="green-hd">I am</span> Ashwin</div>
           <div class="sp-hd2 center-align">Senior Software Engineer at MoneySmart</div>
-          <br><br>
+          <br /><br />
           <!-- <div class="center-align">
             <a class="waves-effect waves-light btn center-align">See My Portfolio</a>
           </div> -->
@@ -68,9 +68,13 @@ Crafted with ❤ in Bangalore, India.
             <a href="https://www.facebook.com/ashwin.k.shenoy">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-          </div><!--social-icons end-->
-        </div><!--splash Content end-->
-      </div><!--container end-->
-    </div><!--splash-->
+          </div>
+          <!--social-icons end-->
+        </div>
+        <!--splash Content end-->
+      </div>
+      <!--container end-->
+    </div>
+    <!--splash-->
   </body>
 </html>
